# noteapp

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: encoding.rs  file_ops.rs  mod.rs  settings.rs  watcher.rs
src/components/: EditorPane.tsx  FindReplacePanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  Toolbar.tsx
src/editor/: languages.ts  setup.ts  themes.ts
src/lib/: store.ts  tauriApi.ts
src/styles/: index.css
